<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    >
    <TextView
        android:id="@+id/txtSmallLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="2dp"
        android:textColor="@android:color/white"
        android:text="@string/txt_label_set_pattern"
        />
    <TextView
        android:id="@+id/txtPatternLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txt_label_draw_pattern"
        android:textSize="20dp"
        android:padding="2dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        />
    <com.bcgdv.asia.lib.connectpattern.ConnectPatternView
        android:id="@+id/connectPattern"
        android:padding="45dp"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:connectPatternNumber="nine"
        app:connectPatternCircleColor="@android:color/white"
        app:connectPatternLineColor="@color/colorAccent"
        app:connectPatternCircleRadius="6dp"
        app:connectPatternLineWidth="3dp"
        app:connectPatternAnimationType="bottom"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            />
        <Button
            android:id="@+id/btnRetry"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="@string/btn_cancel"
            android:textSize="20dp"
            android:textColor="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            />
        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="@string/btn_confirm"
            android:textSize="20dp"
            android:textColor="@android:color/darker_gray"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnForgot"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/btn_forgot"
        android:textSize="12dp"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        />

</LinearLayout>
